# schnorr

./: Cargo.toml  README.md  SPEC.md
benches/: schnorr_benchmarks.rs
specs/: SPEC.md  keytree.md  schnorr.md  ss.md
src/: adaptor.rs  aggsig.rs  batch.rs  context.rs  counterparty.rs  ecdh.rs  errors.rs  feldman_vss.rs  lib.rs  multimessage.rs  multisignature.rs  musig.rs  musig_test.rs  schnorr.rs  ser.rs  signature.rs  signer.rs  threshold.rs  threshold_test.rs  tools.rs
src/keys/: aggregation.rs  extended.rs  mod.rs  multi.rs  multikey.rs  pair.rs  public.rs  secret.rs
src/musig/: commitment.rs  core.rs  mod.rs  parti.rs
