[package]
name = "schnorr"
version = "0.0.20"
description = "Schnorr Signatures"
authors = ["hello@organism.org"]
license = "Apache-2.0"
repository = "https://github.com/stichtingorganism/schnorr"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "schnorr", "curve25519", "signature", "ECC"]
documentation = "https://docs.rs/schnorr"
edition = "2018"

[dependencies]
serde = "^1.0"
rand = "0.7.*"
thiserror = "1.0"
subtle = { version = "2.2", features = ["nightly"] }
bacteria = "0.0.8"
mohan = { version = "0.0.*", features = [] }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3"
bincode = "1"
hex = "0.4"
blake2 = "0.8"
rand_chacha = "0.2"

[[bench]]
name = "schnorr_benchmarks"
harness = false
